# hyprbrowser

./: .gitignore  Cargo.toml  DEVELOPER_GUIDE.md  FEATURES.md  GPU_CONFIG_REFERENCE.md  GPU_EXAMPLES.rs  GPU_OPTIMIZATION.md  INSTALL.md  PROJECT_OVERVIEW.md  README.md  build.ps1  build.rs
examples/: hyprbrowser_mod_example.rs
src/: adblock.rs  browser.rs  devtools.rs  downloads.rs  gpu_benchmark.rs  gpu_detect.rs  history.rs  icons.rs  keybindings_panel.rs  main.rs  module_loader.rs  modules_panel.rs  permission_panel.rs  quick_search.rs  sidebar.rs  snow.rs  state.rs  tabs.rs  theme.rs  updater_panel.rs  utils.rs  vpn.rs  workflow_panel.rs
src/shaders/: snow_igpu.wgsl
