[package]
name = "hyprbrowser"
version = "1.0.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["wgpu", "debug"] }
wgsl-rs = "0.0.0-reserved"
wgpu = "0.19"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
bytes = "1.0"
futures = "0.3"
glam = "0.27"
once_cell = "1.19"
lazy_static = "1.4"
regex = "1.10"
url = "2.5"
dirs = "5.0"
which = "5.0"
zip = "0.6"
evalexpr = "11.0"
whoami = "1.4"
rand = "0.8"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.8"
urlencoding = "2.1"
dark-light = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[[bin]]
name = "hyprbrowser"
path = "src/main.rs"
